# cocktail-recommendation

./: .gitignore  README.md  build.sh  commit-convention.md  docker-compose-local.yml  docker-compose-with-flask.yml  docker-compose-without-flask.yml
auth/: build.gradle
auth/src/main/java/cocktail/auth/: AuthApplication.java
auth/src/main/resources/: application.properties
auth/src/test/java/cocktail/auth/: AuthApplicationTests.java
discovery/: Dockerfile  build.gradle
discovery/src/main/java/cocktail/discovery/: DiscoveryApplication.java
discovery/src/main/resources/: application.properties
discovery/src/test/java/cocktail/discovery/: DiscoveryApplicationTests.java
flask/: .gitignore  Dockerfile  app.py  db.sqlite  pyproject.toml  rating.py
front/: Dockerfile.dev  Dockerfile.prod  docker-compose-dev.yml  docker-compose-prod.yml  package-lock.json  package.json
front/public/: index.html
front/src/: App.js  Home.js  Join.js  Login.js  LoginContext.js  Navigation.js  index.js
front/src/api/: APIStarHandler.js  starHandler.js
front/src/css/: App.css  drink-bti.css  navigation.css  star.css
front/src/pages/: ColorfulSelector.js  FruitySelector.js  ProofSelector.js  UserDetail.js
front/src/render/: CFBased.js  CfCockTail.js  ContentBased.js  StarRender.js  TodayCockTail.js
gateway/: build.gradle
gateway/src/main/resources/: application.yml
test/: build.gradle
test/src/main/java/cocktail/test/: TestApplication.java  (+1 more)
test/src/main/resources/: application.properties
user/: build.gradle
user/src/main/resources/: application.properties
(+43 files in other folders)
